--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="style/style2.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    
+    <!-- BOOTSTRAP CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
     <style>
         .material-symbols-outlined {
           font-variation-settings:
@@ -35,7 +40,6 @@
             </ul>
         </nav>
         <i class='bx bxs-cart-alt carrito'></i>
-        <box-icon type='solid' name='cart-alt'></box-icon>
     </header>
     <div class="banner">
     </div>
@@ -56,163 +60,40 @@
                 <li><a href="#">Baño</a></li>
             </ul>
         </nav>
-        <section class="columnas3">
-            <div class="imagenes">
-                <img src="img/carretilla.jpg" alt="" id="articulo">
-                <div class="precio">
-                    <p>Precio: </p>
-                    <h3>$20.00</h3>
+
+        <section class="modal-compra">
+            <div class="cont-compra">
+                <h1 class="text-warning text-center">Carrito de Compras</h1>
+                <i class="bx bxs-x-circle bx-md text-danger" id="boton-cerrar"></i>
+                <div class="info-carrito">
+                    <table class="table table-warning table-striped table-responsive-sm">
+                        <thead>
+                          <tr>
+                            <th scope="col">Imagen</th>
+                            <th scope="col">Plato</th>
+                            <th scope="col">Precio c/u</th>
+                            <th scope="col">Cantidad</th>
+                            <th scope="col">Total</th>
+                          </tr>
+                        </thead>
+                        <tbody class="info-compra">
+                        </tbody>
+                    </table>
                 </div>
-                <div class="overlay">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, porro.</p>
-                    <input type="submit" value="Agregar al carrito" id="btn-comprar">
-                </div>
-            </div>
-            <div class="imagenes">
-                <img src="img/destornillador.jpg" alt="" id="articulo">
-                <div class="precio">
-                    <p>Precio: </p>
-                    <h3>$20.00</h3>
-                </div>
-                <div class="overlay">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, porro.</p>
-                    <input type="submit" value="Agregar al carrito" id="btn-comprar">
-                </div>
-            </div>
-            <div class="imagenes">
-                <img src="img/escalera.jpg" alt="" id="articulo">
-                <div class="precio">
-                    <p>Precio: </p>
-                    <h3>$20.00</h3>
-                </div>
-                <div class="overlay">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, porro.</p>
-                    <input type="submit" value="Agregar al carrito" id="btn-comprar">
-                </div>
-            </div>
-            <div class="imagenes">
-                <img src="img/lampa.jpg" alt="" id="articulo">
-                <div class="precio">
-                    <p>Precio: </p>
-                    <h3>$20.00</h3>
-                </div>
-                <div class="overlay">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, porro.</p>
-                    <input type="submit" value="Agregar al carrito" id="btn-comprar">
-                </div>
-            </div>
-            <div class="imagenes">
-                <img src="img/lampara.jpg" alt="" id="articulo">
-                <div class="precio">
-                    <p>Precio: </p>
-                    <h3>$20.00</h3>
-                </div>
-                <div class="overlay">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, porro.</p>
-                    <input type="submit" value="Agregar al carrito" id="btn-comprar">
-                </div>
-            </div>
-            <div class="imagenes">
-                <img src="img/manguera.jpg" alt="" id="articulo">
-                <div class="precio">
-                    <p>Precio: </p>
-                    <h3>$20.00</h3>
-                </div>
-                <div class="overlay">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, porro.</p>
-                    <input type="submit" value="Agregar al carrito" id="btn-comprar">
+                <div class="pie-compra">
+                    <p class="btn btn-primary" id="limpiar">Limpiar carrito</p>
+                    <p>Precio Total: 
+                        <b style="font-size: 24px;">S/ 100.00</b>
+                    </p>
                 </div>
             </div>
         </section>
+
+        <section class="columnas3">
+
+        </section>
         <section class="columnas4">
-            <div class="imagenes">
-                <img src="img/martillo.jpg" alt="" id="articulo">
-                <div class="precio">
-                    <p>Precio: </p>
-                    <h3>$20.00</h3>
-                </div>
-                <div class="overlay">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, porro.</p>
-                    <input type="submit" value="Agregar al carrito" id="btn-comprar">
-                </div>
-            </div>
-            <div class="imagenes">
-                <img src="img/rastrillo.jpg" alt="" id="articulo">
-                <div class="precio">
-                    <p>Precio: </p>
-                    <h3>$20.00</h3>
-                </div>
-                <div class="overlay">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, porro.</p>
-                    <input type="submit" value="Agregar al carrito" id="btn-comprar">
-                </div>
-            </div>
-            <div class="imagenes">
-                <img src="img/regadora.jpg" alt="" id="articulo">
-                <div class="precio">
-                    <p>Precio: </p>
-                    <h3>$20.00</h3>
-                </div>
-                <div class="overlay">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, porro.</p>
-                    <input type="submit" value="Agregar al carrito" id="btn-comprar">
-                </div>
-            </div>
-            <div class="imagenes">
-                <img src="img/tapa_baño.jpg" alt="" id="articulo">
-                <div class="precio">
-                    <p>Precio: </p>
-                    <h3>$20.00</h3>
-                </div>
-                <div class="overlay">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, porro.</p>
-                    <input type="submit" value="Agregar al carrito" id="btn-comprar">
-                </div>
-            </div>
-            <div class="imagenes">
-                <img src="img/tapiz.jpg" alt="" id="articulo">
-                <div class="precio">
-                    <p>Precio: </p>
-                    <h3>$20.00</h3>
-                </div>
-                <div class="overlay">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, porro.</p>
-                    <input type="submit" value="Agregar al carrito" id="btn-comprar">
-                </div>
-            </div>
-            <div class="imagenes">
-                <img src="img/pintura.jpg" alt="" id="articulo">
-                <div class="precio">
-                    <p>Precio: </p>
-                    <h3>$20.00</h3>
-                </div>
-                <div class="overlay">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, porro.</p>
-                    <input type="submit" value="Agregar al carrito" id="btn-comprar">
-                </div>
-            </div>
-            <div class="imagenes">
-                <img src="img/cemento.jpg" alt="" id="articulo">
-                <div class="precio">
-                    <p>Precio: </p>
-                    <h3>$20.00</h3>
-                </div>
-                <div class="overlay">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, porro.</p>
-                    <input type="submit" value="Agregar al carrito" id="btn-comprar">
-                </div>
-            </div>
-            <div class="imagenes">
-                <img src="img/rodillo.jpg" alt="" id="articulo">
-                <div class="precio">
-                    <p>Precio: </p>
-                    <h3>$20.00</h3>
-                </div>
-                <div class="overlay">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, porro.</p>
-                    <input type="submit" value="Agregar al carrito" id="btn-comprar">
-                </div>
-            </div>
+
         </section>
     </main>
 
@@ -234,14 +115,22 @@
                 <div class="linea2"></div>
                 <ul>
                     <li>Los Portales</li>
-                    <li>Celular:961 456 785/987 456 321</li>
-                    <li>Correo:academiatriunfadores@gmail.com</li>
+                    <li>Celular:961 256 785/987 356 321</li>
+                    <li>Correo:somosferreobregon@gmail.com</li>
                 </ul>
         </div>
     </footer>
 
+    <!-- BOOTSTRAP JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
+
     <!--Archivo Javascript-->
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/carrito.js"></script>
+    <script src="js/productos.js"></script>
+    <script src="js/pedido.js"></script>
 
     <!--FONTAWESOME CDN-->
     <script src="https://kit.fontawesome.com/cb68de0b4a.js" crossorigin="anonymous"></script>
