--- a/index.html
+++ b/index.html
@@ -90,10 +90,8 @@
         </section>
 
         <section class="columnas3">
-
         </section>
         <section class="columnas4">
-
         </section>
     </main>
 
@@ -128,9 +126,12 @@
 
     <!--Archivo Javascript-->
     <script src="js/script.js"></script>
+    <script src="js/modal.js"></script>
+    <script src="js/articulos.js"></script>
+    <script src="js/cargaProductos.js"></script>
     <script src="js/carrito.js"></script>
-    <script src="js/productos.js"></script>
     <script src="js/pedido.js"></script>
+    
 
     <!--FONTAWESOME CDN-->
     <script src="https://kit.fontawesome.com/cb68de0b4a.js" crossorigin="anonymous"></script>
