--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <i class="bx bx-search-alt-2 bx-md"></i>
         </div>
         <i class='bx bxs-cart-alt carrito'></i>
+        
     </header>
     <div class="banner">
     </div>
@@ -95,26 +96,30 @@
     </main>
 
     <footer>
-        <div class="col-lg-4">
-            <img src="img/logoFerreteria.png" alt="" style="width: 10rem; border-radius: 50%;">
-            <h4>Siguenos en:</h4>
-            <h3>Ferretería Obregón</h3>
-        </div>
-        <div class="col-lg-4">
-            <h2>Horario de Atención</h2>
-            <div class="linea2"></div>
-            <p>Todos los dias de 9:00am - 9:00pm</p>
-            <p>Lunes a Viernes de 9:00am - 9:00pm</p>
-            <p>Sábados y Domingos de 9:00am - 5:30pm</p>
-        </div>
-        <div class="col-lg-4">
-            <h2>Contáctanos en:</h2>
-            <div class="linea2"></div>
-            <ul>
-                <li>Los Portales</li>
-                <li>Celular:961 256 785/987 356 321</li>
-                <li>Correo:somosferreobregon@gmail.com</li>
-            </ul>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <img src="img/logoFerreteria.png" alt="" style="width: 10rem; border-radius: 50%;">
+                    <h4>Siguenos en:</h4>
+                    <h3>Ferretería Obregón</h3>
+                </div>
+                <div class="col-lg-4">
+                    <h2>Horario de Atención</h2>
+                    <div class="linea2"></div>
+                    <p>Todos los dias de 9:00am - 9:00pm</p>
+                    <p>Lunes a Viernes de 9:00am - 9:00pm</p>
+                    <p>Sábados y Domingos de 9:00am - 5:30pm</p>
+                </div>
+                <div class="col-lg-4">
+                    <h2>Contáctanos en:</h2>
+                    <div class="linea2"></div>
+                    <ul>
+                        <li>Los Portales</li>
+                        <li>Celular:961 256 785/987 356 321</li>
+                        <li>Correo:somosferreobregon@gmail.com</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 
