--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="buscar">
             <input type="text" placeholder="Buscar">
-            <i class="bx bx-search-alt-2 bx-md"></i>
+            <i class="bx bx-search-alt-2 bx-md icono-buscar"></i>
         </div>
         <i class='bx bxs-cart-alt carrito'></i>
         
