--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <input type="text" placeholder="Buscar">
             <i class="bx bx-search-alt-2 bx-md icono-buscar"></i>
         </div>
-        <i class='bx bxs-cart-alt carrito'></i>
+        <i class='bx bxs-cart-alt carrito'>0</i>
         
     </header>
     <div class="banner">
@@ -46,20 +46,6 @@
     <a href="#inicio" class="fa-solid fa-arrow-up" id="subir"></a>
 
     <main>
-        <nav class="menu-categoria">
-            <ul>
-                <li align="center"><span class="material-symbols-outlined">
-                        menu
-                    </span> Categorías</li>
-                <li><a href="#">Construcción</a></li>
-                <li><a href="#">Herramientas para hogar</a></li>
-                <li><a href="#">Pintura</a></li>
-                <li><a href="#">Acabados</a></li>
-                <li><a href="#">Para el Jardín</a></li>
-                <li><a href="#">Baño</a></li>
-            </ul>
-        </nav>
-
         <section class="modal-compra">
             <div class="cont-compra">
                 <h1 class="text-warning text-center">Carrito de Compras</h1>
@@ -89,8 +75,6 @@
             </div>
         </section>
 
-        <section class="columnas3">
-        </section>
         <section class="columnas4">
         </section>
     </main>
