funcionalidad del carrito terminada

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <input type="text" placeholder="Buscar">
             <i class="bx bx-search-alt-2 bx-md icono-buscar"></i>
         </div>
-        <i class='bx bxs-cart-alt carrito'>0</i>
+        <i class='bx bxs-cart-alt carrito' id="contador">0</i>
         
     </header>
     <div class="banner">
