--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="pie-compra">
                     <p class="btn btn-primary" id="limpiar">Vaciar carrito</p>
                     <p>Precio Total:
-                        <b style="font-size: 24px;">S/ 100.00</b>
+                        <b class="precioTotal" style="font-size: 24px;">S/ 0</b>
                     </p>
                 </div>
             </div>
