--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <tr>
                                 <th scope="col">Imagen</th>
                                 <th scope="col">Plato</th>
-                                <th scope="col">Precio c/u</th>
+                                <th scope="col">Precio</th>
                                 <th scope="col">Cantidad</th>
                                 <th scope="col">Total</th>
                                 <th scope="col">Eliminar</th>
