Responsive design en el la tabla del carrito de compras completa

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <i class="bx bx-search-alt-2 bx-md icono-buscar"></i>
         </div>
         <i class='bx bxs-cart-alt carrito' id="contador">0</i>
-        
+
     </header>
     <div class="banner">
     </div>
@@ -68,7 +68,7 @@
                     </table>
                 </div>
                 <div class="pie-compra">
-                    <p class="btn btn-primary" id="limpiar">Vaciar carrito</p>
+                    <p class="btn btn-success" id="procesar">Procesar Pedido</p>
                     <p>Precio Total:
                         <b class="precioTotal" style="font-size: 24px;">S/ 0</b>
                     </p>
@@ -117,7 +117,7 @@
     <script src="js/script.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/articulos.js"></script>
-    <script src="js/cargaProductos.js"></script>
+    <script src="js/cargaArticulos.js"></script>
     <script src="js/carrito.js"></script>
     <script src="js/pedido.js"></script>
 
